# crewai_mcp_demo

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
src/crewai_mcp_demo/: crew.py  main.py
src/crewai_mcp_demo/config/: agents.yaml  tasks.yaml
src/crewai_mcp_demo/tools/: __init__.py  github_tools.py  mcp_filesystem.py  mcp_github.py  mcp_google_search.py
