[project]
name = "crewai_mcp_demo"
version = "0.1.0"
description = "crewai-mcp-demo using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai-tools[mcp]>=1.4.1",
    "crewai[tools]==1.4.1",
    "mcp>=1.21.1",
    "litellm>=1.0.0",
]

[project.scripts]
crewai_mcp_demo = "crewai_mcp_demo.main:run"
run_crew = "crewai_mcp_demo.main:run"
train = "crewai_mcp_demo.main:train"
replay = "crewai_mcp_demo.main:replay"
test = "crewai_mcp_demo.main:test"
run_with_trigger = "crewai_mcp_demo.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
